# knowledge-base

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.md
docs/node/: index.md
docs/node/javascript/: index.md
docs/node/setup/: index.md  tools.md
docs/python/: faq.md  index.md  onboarding.md  project-setup-guide.md
docs/python/AI-onboarding/: 1_machine_learning.md  2_large_language_models.md
docs/python/best_practices/: styleguide.md
docs/python/testing/: 3_unittest.md  6_factory_boy.md
docs/rails/: index.md
docs/rails/on_boarding/: chapter_I.md  chapter_II.md  chapter_III.md  chapter_IV.md
docs/rails/react_onboarding/: Overview.md
docs/rails/ruby/: installation.md
node/: index.html
node/javascript/: index.html
node/setup/: index.html
node/setup/tools/: index.html
python/: index.html
python/AI-onboarding/1_machine_learning/: index.html
python/AI-onboarding/2_large_language_models/: index.html
python/best_practices/code_principles/: index.html
python/best_practices/styleguide/: index.html
python/best_practices/zen_of_python/: index.html
python/faq/: index.html
python/machine_learning/1_introduction/: index.html
python/machine_learning/2_regression/: index.html
python/machine_learning/3_evaluation/: index.html
python/onboarding/: index.html
python/pre-commit/: index.html
python/project-setup-guide/: index.html
python/python_virtual_env/: index.html
python/testing/2_sample_ticket/: index.html
rails/: index.html
search/: search_index.json
(+61 files in other folders)
