[tool.poetry]
name = "knowledge-base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "knowledge_base"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.1.1"
mkdocs-jupyter = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
