[tool.poetry]
name = "knowledge-base"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "9.5.24"
mkdocs-jupyter = "0.24.7"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
